# snake-ninja

./: CMakeLists.txt  Makefile
docker/: Dockerfile  build-docker-image.sh
includes/: game.hpp  snake.hpp  util.hpp
src/: game.cpp  main.cpp  snake.cpp  util.cpp
